@@ -31,6 +31,9 @@ spring.thymeleaf.prefix: /WEB-INF/views/
 spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: false
 
+mailgun.endpoint: http://127.0.0.1:8888/mailgun/send-message
+mailgun.password: secret
+
 liquibase.contexts: scheme, init-data, test-data
 liquibase.change-log: classpath:/liquibase/changelog.xml
 
@@ -115,7 +118,6 @@ spring.autoconfigure.exclude: \
 	, org.springframework.boot.autoconfigure.data.solr.SolrRepositoriesAutoConfiguration \
 	, org.springframework.boot.autoconfigure.data.web.SpringDataWebAutoConfiguration \
 	, org.springframework.boot.autoconfigure.social.TwitterAutoConfiguration \
-	, org.springframework.boot.autoconfigure.web.WebClientAutoConfiguration \
 	, org.springframework.boot.autoconfigure.webservices.WebServicesAutoConfiguration \
 	, org.springframework.boot.autoconfigure.websocket.WebSocketAutoConfiguration \
 	, org.springframework.boot.autoconfigure.websocket.WebSocketMessagingAutoConfiguration \
