@@ -20,6 +20,9 @@ spring.messages.basename: \
     ru/mystamps/i18n/SpringSecurityMessages, \
     ru/mystamps/i18n/MailTemplates
 
+mailgun.endpoint: http://127.0.0.1:8888/mailgun/send-message
+mailgun.password: secret
+
 spring.thymeleaf.mode: HTML
 spring.thymeleaf.prefix: /WEB-INF/views/
 spring.thymeleaf.suffix: .html
@@ -113,7 +116,6 @@ spring.autoconfigure.exclude: \
 	, org.springframework.boot.autoconfigure.data.solr.SolrRepositoriesAutoConfiguration \
 	, org.springframework.boot.autoconfigure.data.web.SpringDataWebAutoConfiguration \
 	, org.springframework.boot.autoconfigure.social.TwitterAutoConfiguration \
-	, org.springframework.boot.autoconfigure.web.WebClientAutoConfiguration \
 	, org.springframework.boot.autoconfigure.webservices.WebServicesAutoConfiguration \
 	, org.springframework.boot.autoconfigure.websocket.WebSocketAutoConfiguration \
 	, org.springframework.boot.autoconfigure.websocket.WebSocketMessagingAutoConfiguration \
