@@ -25,6 +25,9 @@ spring.thymeleaf.prefix: /WEB-INF/views/
 spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: true
 
+mailgun.endpoint: https://api.mailgun.net/v3/my-stamps.ru/messages
+mailgun.password: {{ mailgun_api_password }}
+
 # see also duplicate definition at pom.xml
 liquibase.contexts: scheme, init-data, prod-data
 liquibase.change-log: classpath:/liquibase/changelog.xml
@@ -115,7 +118,6 @@ spring.autoconfigure.exclude: \
 	, org.springframework.boot.autoconfigure.data.solr.SolrRepositoriesAutoConfiguration \
 	, org.springframework.boot.autoconfigure.data.web.SpringDataWebAutoConfiguration \
 	, org.springframework.boot.autoconfigure.social.TwitterAutoConfiguration \
-	, org.springframework.boot.autoconfigure.web.WebClientAutoConfiguration \
 	, org.springframework.boot.autoconfigure.webservices.WebServicesAutoConfiguration \
 	, org.springframework.boot.autoconfigure.websocket.WebSocketAutoConfiguration \
 	, org.springframework.boot.autoconfigure.websocket.WebSocketMessagingAutoConfiguration \
