@@ -26,6 +26,7 @@
 - (functionality)  suggest a possible country on a series creation page (contributed by John Shkarin)
 - (functionality)  suggest a possible category on a series creation page
 - (functionality)  show similar series on a page with series info
+- (infrastructure) add ability to send e-mails via Mailgun API
 
 0.3
 - (functionality)  implemented possibility to user to add series to his collection
